[package]
name = "sift4"
license = "MIT"
description = "Sift4 is a very fast and accurate string distance algorithm."
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
keywords = ["sift4", "string", "fuzzy", "search", "matching", "text"]
edition = "2018"
repository = "https://github.com/PrismaPhonic/Sift4"
documentation = "https://prismaphonic.github.io/sift4-docs/"

include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
